# p0f_signature_generator

./: CMakeLists.txt  README.md
scripts/: 7015-small-no-id.csv  7016.csv  7017.csv  best_model_RandomForest.joblib  inference.py  middle_all.csv  small_all.csv  trainer.py
scripts/ml/: README.md  best_model_DecisionTree.joblib  best_model_KNN.joblib  best_model_RandomForest.joblib  classified_results.csv  decision_tree.py  inference.py  port.py  predict.py  pyproject.toml  train.py
scripts/ml/data/: 7015.csv  7022.csv  merge.sh  merged.csv
scripts/ml/models/: best_model_DecisionTree.joblib  best_model_MLPClassifier.joblib
scripts/ml/sklearn_porter/: Porter.py  __init__.py
scripts/tdcsv/: 7019.csv  7022.csv  7023.csv  README.md  merge.sh  middle_all.csv  tdcsv
scripts/tdcsv/data/: debian.txt  windows-server-2022.txt
scripts/trainers/: main.py  pyproject.toml
src/: .build-96457.c  .build-97635.c  COMPILER-WARNINGS  build.sh  classifier.c  classifier.h  fp_tcp.c  main.py  p0f
